# Rustcript

./: .gitignore  AI_INSTRUCTIONS.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  MANUAL.md  README.md  sonar-project.properties
examples/: 01_basics.rc  02_math_and_types.rc  03_legacy_flow.rc  04_structured_logic.rc  05_loops.rc  06_match.rc  07_host_commands.rc  08_guessing_game.rc  09_scopes.rc  10_complex_types.rc  11_methods_loops.rc  12_try_catch.rc  13_functions.rc  14_imports_lib.rc  14_imports_main.rc  15_datetime_vec_opt.rc  16_new_types.rc  17_string_manipulation.rc  18_math_rand_regex.rc  19_modules_lib.rc  19_modules_main.rc  20_json.rc  21_arrays.rc  22_safety_limit.rc  23_file_io.rc  24_first_class_funcs.rc  native_host_demo.rs
src/: complex_types.rs  data_types.rs  flow_control.rs  functions.rs  importer.rs  interpreter.rs  interpreter_step.rs  interpreter_utils.rs  io_lib.rs  json_lib.rs  lib.rs  loops.rs  main.rs  match_control.rs  operators.rs  parser.rs  regex_lib.rs  stdlib.rs  types.rs  user_data.rs
tests/: io_permissions_demo.rc  io_unsafe_demo.rc  lib_integration_test.rs  manual_debug.rc  native_interop_test.rs  test_runner.rc
